--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
                   <h3 class="text-center">Les cours</h3>
                   <div class="row justify-content-sm-center">
                     
-                    <div class="col-lg-3 border-cours">
+                    <div class="col-lg-3 mx-lg-0 mx-5 border-cours">
                       <h4>Cours 1</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                     </div>
 
-                    <div class="col-lg-3 ml-lg-5 mr-lg-5 border-cours">
+                    <div class="col-lg-3 mx-5 my-lg-0 my-5  border-cours">
                       <h4>Cours 1</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                     </div>
 
-                    <div class="col-lg-3 border-cours">
+                    <div class="col-lg-3 mx-lg-0 mx-5 border-cours">
                       <h4>Cours 1</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                     </div>
@@ -109,28 +109,28 @@
               <h3 class="text-center">Gallerie</h3>
               <div class="container">
                 <div class="row">
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
-                  <div class="col-lg-3 col-md-4 col-sm-6 p-3">
+                  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 p-3">
                     <img src="images/1.jpg" class="img-thumbnail img-fluid" alt="...">
                   </div>
                   
