--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <header class=" sticky-top ml-0 mr-0">
           <nav class="navbar navbar-light shadow-sm navbar-expand-lg">
-            <a class="navbar-brand mr-0" href="#">Nathalie Gaillard</a>
+            <a class="navbar-brand mr-0" href="#">LOREM IPSUM</a>
               <button class="navbar-toggler border" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,7 +43,7 @@
 
           <section class="vitrine not-after text-left" id="vitrine">
             <h1 class="ml-lg-5">
-              Nathalie Gaillard
+              LOREM IPSUM
             </h1>
             <h2 class="ml-lg-5">The spectacle before us </h2>
           </section>
@@ -169,7 +169,7 @@
               <div class="container">
                 <div class="row border-bottom border-dark">
                   <div class="col-lg-2">
-                    <h5 style="font-size:13.28px">Nathalie Gaillard</h5>
+                    <h5 style="font-size:13.28px">LOREM IPSUM</h5>
                     <p>(+33)6.17.38.72.78<br>
                     charlywandja@gmail.com<br>
                     www.charlywandja.com
